title, meetup link, some content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Formation Domain Driven Design
+title: Paris Clojure Meetup 
 email: jeremie@grodziski.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
